update html file links

--- a/experiments/css/style.css
+++ b/experiments/css/style.css
@@ -44,7 +44,7 @@ table {
 input, select, button {font-family: Georgia, serif; font-size: 14px;}
 
 button {
-	background: url(button-gradient.png);
+	background: url(../img/button-gradient.png);
 	border: 1px solid #999;
 	border-top: 1px solid #e0e0e0;
 	border-left: 1px solid #e0e0e0;
